added all the basic setup

--- a/src/app/recepies/recepie-details/recepie-details.component.html
+++ b/src/app/recepies/recepie-details/recepie-details.component.html
@@ -1,1 +1,30 @@
-<p>recepie-details works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <img src="" alt="">
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <a href="#">
+            <button class="dropdown-toggle">Manage <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <li>To Shopping List</li>
+            </ul>
+        </a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        Recepie Name
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        Recepie Discription
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        Recepie Ingridents
+    </div>
+</div>
