--- a/src/app/recepies/recepie-list/recepie-list.component.html
+++ b/src/app/recepies/recepie-list/recepie-list.component.html
@@ -1,1 +1,20 @@
-<p>recepie-list works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <button class="btn btn-success">Add Recepie</button>
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="col-xs-12">
+        <a href="#" class="list-group-item clearfix" *ngFor="let recepie of recepies">
+            <ul class="pull-left">
+                <h4 class="list-group-item-heading">{{recepie.name}}</h4>
+                <p class="list-group-item-text">{{recepie.discription}}</p>
+            </ul>
+            <span class="pull-right">
+                <img [src]="recepie.imagePath" alt="{{recepie.name}}" class="img-responsive" style="max-width: 100px;">
+            </span>
+        </a>
+        <app-recepie-edit></app-recepie-edit>
+    </div>
+</div>
