--- a/src/app/recepies/recepies.component.html
+++ b/src/app/recepies/recepies.component.html
@@ -1,1 +1,8 @@
-<p>recepies works!</p>
+<div class="row">
+    <div class="col-md-5">
+        <app-recepie-list></app-recepie-list>
+    </div>
+    <div class="col-md-7">
+        <app-recepie-details></app-recepie-details>
+    </div>
+</div>
