--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,21 @@
-<p>shopping-edit works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <form>
+            <div class="row">
+                <div class="col-xs-10">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="amount">Amount</label>
+                    <input type="number" name="amount" id="amount" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-10">
+                    <button class="btn btn-success">Add</button>
+                    <button class="btn btn-danger">Delete</button>
+                    <button class="btn btn-primary">Clear</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
