--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,12 @@
-<p>shopping-list works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <app-shopping-edit></app-shopping-edit>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <a href="#" class="list-group-item clearfix" *ngFor="let ingrident of ingridents">
+            <p>{{ingrident.ingrident}} ({{ingrident.amount}})</p>
+        </a>
+    </div>
+</div>
