--- a/src/app/recepies/recepies.component.html
+++ b/src/app/recepies/recepies.component.html
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recepie-list></app-recepie-list>
+        <app-recepie-list (recepieWasSelected)="receviedRecepie = $event"></app-recepie-list>
     </div>
     <div class="col-md-7">
-        <app-recepie-details></app-recepie-details>
+        <app-recepie-details *ngIf="receviedRecepie;else infotext" [recepie]="receviedRecepie"></app-recepie-details>
+        <ng-template #infotext>Please select recepie</ng-template>
     </div>
 </div>
