--- a/src/app/recepies/recepie-details/recepie-details.component.html
+++ b/src/app/recepies/recepie-details/recepie-details.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="">
+        <img src="{{recepie.imagePath}}" alt="{{recepie.name}}" class="img-responsive" style="max-width: 300px;">
     </div>
 </div>
 <div class="row">
@@ -15,12 +15,12 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Recepie Name
+        {{recepie.name}}
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Recepie Discription
+        {{recepie.discription}}
     </div>
 </div>
 <div class="row">
