added shoppping list service added all the functionlity now about to add Routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (dataSent)="dataRecevied=$event"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recepies></app-recepies>
-      <app-shopping-list></app-shopping-list>
+      <app-recepies *ngIf="dataRecevied==='recepies'"></app-recepies>
+      <app-shopping-list *ngIf="dataRecevied==='shopping-list'"></app-shopping-list>
     </div>
   </div>
 </div>
