--- a/src/app/recepies/recepie-list/recepie-list.component.html
+++ b/src/app/recepies/recepie-list/recepie-list.component.html
@@ -7,6 +7,6 @@
 <div class="row">
     <div class="col-xs-12">
         <app-recepie-edit [recepie]="elRecepie" *ngFor="let elRecepie of recepies" 
-        (onSelectedRecepie)="onReceviedRecepie(elRecepie)"></app-recepie-edit>
+        ></app-recepie-edit>
     </div>
 </div>
