--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,12 +14,12 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#">Recepies</a></li>
-          <li><a href="#">Shopping List</a></li>
+          <li><a href="#" (click)="onClicked('recepies')">Recepies</a></li>
+          <li><a href="#" (click)="onClicked('shopping-list')">Shopping List</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <li class="dropdown" appOpenmenu>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
               <li><a href="#">Another action</a></li>
