--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <a href="#" class="list-group-item clearfix" *ngFor="let ingrident of ingridents">
+        <a class="list-group-item clearfix" *ngFor="let ingrident of ingridents">
             <p>{{ingrident.ingrident}} ({{ingrident.amount}})</p>
         </a>
     </div>
