--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header (dataSent)="dataRecevied=$event"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recepies *ngIf="dataRecevied==='recepies'"></app-recepies>
-      <app-shopping-list *ngIf="dataRecevied==='shopping-list'"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
