--- a/src/app/recepies/recepie-list/recepie-edit/recepie-edit.component.html
+++ b/src/app/recepies/recepie-list/recepie-edit/recepie-edit.component.html
@@ -1,4 +1,6 @@
-<a href="#" class="list-group-item clearfix"  (click)="onSelected()">
+<a class="list-group-item clearfix" 
+routerLinkActive="active" 
+[routerLink]="[index]">
     <ul class="pull-left">
         <h4 class="list-group-item-heading">{{recepie.name}}</h4>
         <p class="list-group-item-text">{{recepie.discription}}</p>
