--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,19 +1,21 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit)="onAdditem()" #f="ngForm">
             <div class="row">
-                <div class="col-xs-10">
+                <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required #nameInput>
+                    <input type="text" id="name" ngModel name="name" class="form-control" required>
+                </div>
+                <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" name="amount" id="amount" required #amountInput>
+                    <input type="number" ngModel name="amount" id="amount" class="form-control" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-10">
-                    <button class="btn btn-success" (click)="onAdd()">Add</button>
-                    <button class="btn btn-danger">Delete</button>
-                    <button class="btn btn-primary">Clear</button>
+                    <button class="btn btn-success" type="submit">{{editMode? 'Update' : 'Add'}}</button>
+                    <button class="btn btn-danger" type="button" *ngIf="editMode" (click)="onDelete()">Delete</button>
+                    <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
                 </div>
             </div>
         </form>
